--- a/static/css.css
+++ b/static/css.css
@@ -15,21 +15,16 @@ body {
 #main {
   flex: 1; }
 
-/* headers look bad when the width is small, so */
-
-h1 {
-  line-height: 100%; }
-
 /* Other CSS */
 
 #footer {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
-  padding: 1.5em 0 0em 0;
+  padding: 1.2em 0 0em 0;
   margin: 0 -1em;
   margin-top: 2em;
-  border-top: 1px solid black; }
+  border-top: 1px solid #606c76; }
 
 .footer-item {
   margin: 0 1em;
@@ -44,38 +39,8 @@ body {
   font-family: sans-serif;
   line-height: 120%; }
 
-.text-button {
-  font-size: 10pt;
-  font-weight: normal; }
-
-.text-button::before {content: "[";}
-.text-button::after  {content: "]";}
-
-textarea {
-  font-size: 100%; }
-
-input {
-  font-size: 100%; }
-
-.text-button > a:visited {color: #008ACE;}
-
-a.anchor {
-  margin-right: 0.5em;
-  color: gray; }
-
 form {
   margin: 0; }
-
-textarea {
-  border: 1px solid #ccc;
-  padding: 5px 7px; }
-
-textarea:focus {
-  outline: 0px none;
-  border: 1px solid #07C; }
-
-textarea.big {
-  padding: 10px; }
 
 .fullwidth {
   width: 100%; }
