--- a/static/css.css
+++ b/static/css.css
@@ -17,6 +17,20 @@ body {
 
 /* Other CSS */
 
+#header {
+  border-bottom: 1px solid #606c76;
+  margin-bottom: 3em;
+  padding: 1.5em 1em 0.8em 1em; }
+
+.logo {
+  font-size: 4rem; }
+
+.header-nav {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  font-weight: 700;
+  margin-left: 2em; }
+
 #footer {
   display: flex;
   flex-flow: row wrap;
@@ -33,7 +47,6 @@ body {
 
 body {
   padding: 0px 15px;
-  padding-top: 2em;
   margin: auto;
   max-width: 800px;
   font-family: sans-serif;
