--- a/static/css.css
+++ b/static/css.css
@@ -3,33 +3,39 @@
    100%+20px) */
 
 *, *:before, *:after {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* Making the footer stick to the bottom of the screen */
 
 body {
   display: flex;
   min-height: 100vh;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 #main {
-  flex: 1; }
+  flex: 1;
+}
 
 /* Other CSS */
 
 #header {
   border-bottom: 1px solid #606c76;
   margin-bottom: 3em;
-  padding: 1.5em 1em 0.8em 0.8em; }
+  padding: 1.5em 1em 0.8em 0.8em;
+}
 
 .logo {
-  font-size: 4rem; }
+  font-size: 4rem;
+}
 
 .header-nav {
   text-transform: uppercase;
   font-size: 1.1rem;
   font-weight: 700;
-  margin-left: 2em; }
+  margin-left: 2em;
+}
 
 #footer {
   display: flex;
@@ -38,31 +44,51 @@ body {
   padding: 1.2em 0 0em 0;
   margin: 0 -1em;
   margin-top: 2em;
-  border-top: 1px solid #606c76; }
+  border-top: 1px solid #606c76;
+}
 
 .footer-item {
   margin: 0 1em;
   min-height: 40px;
-  text-align: center; }
+  text-align: center;
+}
 
 body {
   padding: 0px 15px;
   margin: auto;
   max-width: 800px;
   font-family: sans-serif;
-  line-height: 120%; }
+  line-height: 120%;
+}
 
 form {
-  margin: 0; }
+  margin: 0;
+}
 
 .label-err {
-  color: #CC3752; }
+  color: #CC3752;
+}
 
 .fullwidth {
-  width: 100%; }
+  width: 100%;
+}
 
 textarea.fullwidth {
-  resize: vertical; }
+  resize: vertical;
+}
 
 .section:not(.shown) {
-  display:none; }
+  display:none;
+}
+
+.impossible {
+  background-color: gray;
+}
+
+.played {
+  background-color: lightgray;
+}
+
+.absent {
+  opacity: 0.5;
+}
