--- a/static/css.css
+++ b/static/css.css
@@ -96,7 +96,9 @@ textarea.fullwidth {
   border-right:  .1rem solid #e1e1e1;
 }
 
-.roomtable .header-left {
+.roomtable .header-left,
+.roomtable .penalties > :first-child,
+.roomtable .totals > :first-child {
   border-right: solid 2px;
   padding-right: 12px;
   text-align: right;
@@ -123,4 +125,14 @@ textarea.fullwidth {
 
 .roomtable .absent {
   opacity: 0.5;
+}
+
+.roomtable .penalties {
+  border-top: solid 2px;
+}
+
+.roomtable .penalties td,
+.roomtable .totals td {
+  height: 30px;
+  text-align: center;      /* this has no effect on first cell */
 }
