--- a/static/css.css
+++ b/static/css.css
@@ -136,3 +136,43 @@ textarea.fullwidth {
   height: 30px;
   text-align: center;      /* this has no effect on first cell */
 }
+
+.round-edit-popup {
+  max-width: 350px;
+  background: white;
+  padding: 15px 20px;
+  margin: 40px auto;
+  position: relative;
+}
+
+.round-edit-popup [name=penalties] {
+  display: flex;
+  margin: 0 -0.25rem;
+}
+
+.round-edit-popup [name=penalties] > div {
+  flex: 1;
+  margin: 0 0.25rem;
+}
+
+.round-edit-popup button {
+  font-size: 1rem;
+  height: 3rem;
+  line-height: 3rem;
+  padding: 0 1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.round-edit-popup input {
+  font-size: 1.3rem;
+  height: 3rem;
+  line-height: 3rem;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
+}
+
+.round-edit-popup label {
+  font-size: 1.3rem;
+  margin-bottom: .2rem;
+}
