--- a/static/css.css
+++ b/static/css.css
@@ -247,13 +247,21 @@ textarea.fullwidth {
   border-bottom: 1.5px solid;
 }
 
+#timer {
+  margin-top: 1.5em;
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+#timer img {
+  width: 2em;
+  vertical-align: -2px;
+}
+
 #timer-num {
   font-size: 2.5em;
   font-weight: bold;
-  display: block;
-  text-align: center;
-  margin-top: 0.7em;
-  margin-bottom: 0.7em;
+  margin-right: 1rem;
 }
 
 #who-plays-with-who {
