--- a/static/css.css
+++ b/static/css.css
@@ -239,16 +239,18 @@ textarea.fullwidth {
 
 #rounds-container {
   display: flex;
-  margin: 0 -1em;
-  margin-top: 2em;
+  flex-flow: row wrap;
+  margin: 2em -1em;
 }
 .future-rounds {
   flex: 1;
   margin: 0 1em;
+  min-width: 300px;
 }
 .current-round {
   flex: 1;
   margin: 0 1em;
+  min-width: 300px;
 }
 
 #rounds-container h5 {
@@ -317,10 +319,11 @@ textarea.fullwidth {
 
 #round-control-buttons {
   display: flex;
+  flex-flow: row wrap;
   margin: 0 -2.5px;
   margin-top: 1em;
 }
 #round-control-buttons button {
   flex: 1;
-  margin: 0 2.5px;
+  margin: 2.5px;
 }
