--- a/static/css.css
+++ b/static/css.css
@@ -178,7 +178,7 @@ textarea.fullwidth {
 }
 
 .round-edit-popup {
-  width: 450px;
+  max-width: 450px;
   background: white;
   padding: 15px 20px;
   margin: 40px auto;
@@ -187,12 +187,18 @@ textarea.fullwidth {
 
 .round-edit-popup [name=penalties] {
   display: flex;
+  flex-flow: row wrap;
   margin: 0 -0.25rem;
 }
 
 .round-edit-popup [name=penalties] > div {
   flex: 1;
   margin: 0 0.25rem;
+  min-width: 100px;
+}
+
+.round-edit-popup [name=penalties] > div > label {
+  white-space: nowrap;
 }
 
 .round-edit-popup button {
