--- a/static/css.css
+++ b/static/css.css
@@ -85,10 +85,11 @@ textarea.fullwidth {
   margin-left: auto;
   margin-right: auto;
   table-layout: fixed;
+  min-width: 650px;
 }
 
 .roomtable td {
-  padding: 10px;
+  padding: 10px 5px;
   border-bottom: .1rem solid #e1e1e1;
   border-right:  .1rem solid #e1e1e1;
 }
